# cookiecutters

./: README.md
python/: .gitignore  cookiecutter.json
python/{{cookiecutter.project_name}}/: .gitignore  pyproject.toml
python/{{cookiecutter.project_name}}/scripts/: configure_pyright.fish  configure_pyright.sh
python/{{cookiecutter.project_name}}/tests/: test_import.py
